--- a/src/app/clubsposts/ppst.css
+++ b/src/app/clubsposts/ppst.css
@@ -1,21 +1,40 @@
-/* code {
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 2 version
+*/
+
+code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 .nft {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
   width: 300px;
   margin: 2rem auto;
   border: 1px solid #ffffff22;
   background-color: #282c34;
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(rgba(40, 44, 52, 1)),
+    to(rgba(17, 0, 32, 0.5))
+  );
   background: linear-gradient(
     0deg,
     rgba(40, 44, 52, 1) 0%,
     rgba(17, 0, 32, 0.5) 100%
   );
+  -webkit-box-shadow: 0 7px 20px 5px #00000088;
   box-shadow: 0 7px 20px 5px #00000088;
 
   overflow: hidden;
+  -webkit-transition: 0.5s all;
   transition: 0.5s all;
 
   hr {
@@ -30,21 +49,27 @@
   }
 
   .main {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     width: 100%;
     padding: 1rem;
 
     .image-wrapper {
       position: relative;
-      width: auto; 
-      height: 200px; 
+      width: auto; /* Ensure the image takes up the full width of the card */
+      height: 200px; /* Set this height based on your design */
       overflow: hidden;
       border-radius: 0.5rem;
       margin-right: 1.75rem;
     }
 
     .tokenImage {
+      -o-object-fit: cover;
       object-fit: cover;
     }
 
@@ -54,12 +79,22 @@
     }
 
     .tokenInfo {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
       justify-content: space-between;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
       margin-right: 1.5rem;
       .price {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         color: #ee83e5;
         font-weight: 700;
@@ -71,8 +106,12 @@
       }
 
       .duration {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         width: 40%;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         color: #a89ec9;
 
@@ -84,7 +123,11 @@
     }
 
     .creator {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
       margin-top: 0.2rem;
       margin-bottom: -0.3rem;
@@ -95,13 +138,18 @@
       }
 
       .wrapper {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         border: 1px solid #ffffff22;
         padding: 0.3rem;
         margin: 0;
         margin-right: 0.5rem;
         border-radius: 100%;
+        -webkit-box-shadow: inset 0 0 0 4px #000000aa;
         box-shadow: inset 0 0 0 4px #000000aa;
 
         img {
@@ -109,6 +157,7 @@
           border: 1px solid #ffffff22;
           width: 2rem;
           height: 2rem;
+          -o-object-fit: cover;
           object-fit: cover;
           margin: 0;
         }
@@ -116,7 +165,7 @@
     }
   }
 
-  
+  /* Like btn and delete btn */
   .but {
     height: 28px;
     border: solid 2px #567af2;
@@ -127,17 +176,22 @@
   ::before {
     position: fixed;
     content: "";
+    -webkit-box-shadow: 0 0 100px 40px #ffffff08;
     box-shadow: 0 0 100px 40px #ffffff08;
     top: -10%;
     left: -100%;
+    -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
     height: 60rem;
+    -webkit-transition: 0.7s all;
     transition: 0.7s all;
   }
 
   &:hover {
     border: 1px solid #ffffff44;
+    -webkit-box-shadow: 0 7px 50px 10px #000000aa;
     box-shadow: 0 7px 50px 10px #000000aa;
+    -webkit-transform: scale(1.015);
     transform: scale(1.015);
 
     ::before {
@@ -154,45 +208,68 @@
 }
 
 .bg {
-  position: absolute; 
+  position: absolute; /* Or remove this line if it isn't necessary */
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  z-index: -1; 
+  z-index: -1; /* Ensure it stays behind all content */
 
   .h1 {
     font-size: 8rem;
   }
 }
 .check {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 1.25rem;
 }
 @media (min-width: 700px) {
   .postDisplay {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+
+    -ms-flex-wrap: wrap;
 
     flex-wrap: wrap;
     margin-left: 5%;
   }
 
   .nft {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
     max-width: 300px;
     margin: 2rem auto;
     border: 1px solid #ffffff22;
     background-color: #282c34;
+    background: -webkit-gradient(
+      linear,
+      left bottom,
+      left top,
+      from(rgba(40, 44, 52, 1)),
+      to(rgba(17, 0, 32, 0.5))
+    );
     background: linear-gradient(
       0deg,
       rgba(40, 44, 52, 1) 0%,
       rgba(17, 0, 32, 0.5) 100%
     );
+    -webkit-box-shadow: 0 7px 20px 5px #00000088;
     box-shadow: 0 7px 20px 5px #00000088;
     border-radius: 0.7rem;
 
     overflow: hidden;
+    -webkit-transition: 0.5s all;
     transition: 0.5s all;
 
     hr {
@@ -207,21 +284,27 @@
     }
 
     .main {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
       width: 100%;
       padding: 1rem;
 
       .image-wrapper {
         position: relative;
-        width: auto; 
-        height: 200px; 
+        width: auto; /* Ensure the image takes up the full width of the card */
+        height: 200px; /* Set this height based on your design */
         overflow: hidden;
         border-radius: 0.5rem;
         margin-right: 1.75rem;
       }
 
       .tokenImage {
+        -o-object-fit: cover;
         object-fit: cover;
       }
 
@@ -231,12 +314,22 @@
       }
 
       .tokenInfo {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
         justify-content: space-between;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         margin-right: 1.5rem;
         .price {
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
           align-items: center;
           color: #ee83e5;
           font-weight: 700;
@@ -248,7 +341,11 @@
         }
 
         .duration {
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
           align-items: center;
           color: #a89ec9;
           margin-right: 0.2rem;
@@ -261,7 +358,11 @@
       }
 
       .creator {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         margin-top: 0.2rem;
         margin-bottom: -0.3rem;
@@ -272,13 +373,18 @@
         }
 
         .wrapper {
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
           align-items: center;
           border: 1px solid #ffffff22;
           padding: 0.3rem;
           margin: 0;
           margin-right: 0.5rem;
           border-radius: 100%;
+          -webkit-box-shadow: inset 0 0 0 4px #000000aa;
           box-shadow: inset 0 0 0 4px #000000aa;
 
           img {
@@ -286,6 +392,7 @@
             border: 1px solid #ffffff22;
             width: 2rem;
             height: 2rem;
+            -o-object-fit: cover;
             object-fit: cover;
             margin: 0;
           }
@@ -293,7 +400,7 @@
       }
     }
 
-    
+    /* Like btn and delete btn */
     .but {
       height: 28px;
       border: solid 2px #567af2;
@@ -304,17 +411,22 @@
     ::before {
       position: fixed;
       content: "";
+      -webkit-box-shadow: 0 0 100px 40px #ffffff08;
       box-shadow: 0 0 100px 40px #ffffff08;
       top: -10%;
       left: -100%;
+      -webkit-transform: rotate(-45deg);
       transform: rotate(-45deg);
       height: 60rem;
+      -webkit-transition: 0.7s all;
       transition: 0.7s all;
     }
 
     &:hover {
       border: 1px solid #ffffff44;
+      -webkit-box-shadow: 0 7px 50px 10px #000000aa;
       box-shadow: 0 7px 50px 10px #000000aa;
+      -webkit-transform: scale(1.015);
       transform: scale(1.015);
 
       ::before {
@@ -331,361 +443,29 @@
   }
 
   .bg {
-    position: absolute;
+    position: absolute; /* Or remove this line if it isn't necessary */
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    z-index: -1; 
+    z-index: -1; /* Ensure it stays behind all content */
 
     .h1 {
       font-size: 8rem;
     }
   }
   .check {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-  
+    /* gap: 1.25rem; */
     padding: 0;
     margin: 0;
-  }
-} 
-*/
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-.nft {
-  user-select: none;
-  width: 300px;
-  margin: 2rem auto;
-  border: 1px solid #ffffff22;
-  background-color: #282c34;
-  background: -webkit-linear-gradient(
-    0deg,
-    rgba(40, 44, 52, 1) 0%,
-    rgba(17, 0, 32, 0.5) 100%
-  );
-  background: linear-gradient(
-    0deg,
-    rgba(40, 44, 52, 1) 0%,
-    rgba(17, 0, 32, 0.5) 100%
-  );
-  box-shadow: 0 7px 20px 5px #00000088;
-  overflow: hidden;
-  transition: 0.5s all;
-
-  hr {
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid #88888855;
-    margin-top: 0;
-  }
-
-  ins {
-    text-decoration: none;
-  }
-
-  .main {
-    display: -webkit-flex; /* Added for Safari */
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 1rem;
-
-    .image-wrapper {
-      position: relative;
-      width: auto; /* Ensure the image takes up the full width of the card */
-      height: 200px; /* Set this height based on your design */
-      overflow: hidden;
-      border-radius: 0.5rem;
-      margin-right: 1.75rem;
-    }
-
-    .tokenImage {
-      object-fit: cover;
-    }
-
-    .description {
-      margin: 0.5rem 0;
-      color: #a89ec9;
-    }
-
-    .tokenInfo {
-      display: -webkit-flex; /* Added for Safari */
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-right: 1.5rem;
-
-      .price {
-        display: -webkit-flex; /* Added for Safari */
-        display: flex;
-        align-items: center;
-        color: #ee83e5;
-        font-weight: 700;
-
-        ins {
-          margin-left: -0.3rem;
-          margin-right: 0.5rem;
-        }
-      }
-
-      .duration {
-        display: -webkit-flex; /* Added for Safari */
-        display: flex;
-        width: 40%;
-        align-items: center;
-        color: #a89ec9;
-
-        ins {
-          margin: 0.5rem;
-          margin-bottom: 0.4rem;
-        }
-      }
-    }
-
-    .creator {
-      display: -webkit-flex; /* Added for Safari */
-      display: flex;
-      align-items: center;
-      margin-top: 0.2rem;
-      margin-bottom: -0.3rem;
-
-      ins {
-        color: #a89ec9;
-        text-decoration: none;
-      }
-
-      .wrapper {
-        display: -webkit-flex; /* Added for Safari */
-        display: flex;
-        align-items: center;
-        border: 1px solid #ffffff22;
-        padding: 0.3rem;
-        margin: 0;
-        margin-right: 0.5rem;
-        border-radius: 100%;
-        box-shadow: inset 0 0 0 4px #000000aa;
-
-        img {
-          border-radius: 100%;
-          border: 1px solid #ffffff22;
-          width: 2rem;
-          height: 2rem;
-          object-fit: cover;
-          margin: 0;
-        }
-      }
-    }
-  }
-
-  .but {
-    height: 28px;
-    border: solid 2px #567af2;
-    text-align: center;
-    font-weight: 900;
-  }
-
-  ::before {
-    position: fixed;
-    content: "";
-    box-shadow: 0 0 100px 40px #ffffff08;
-    top: -10%;
-    left: -100%;
-    transform: rotate(-45deg);
-    height: 60rem;
-    transition: 0.7s all;
-  }
-
-  &:hover {
-    border: 1px solid #ffffff44;
-    box-shadow: 0 7px 50px 10px #000000aa;
-    transform: scale(1.015);
-
-    ::before {
-      top: -100%;
-      left: 200%;
-    }
-
-    .but:hover {
-      background-color: #cb2d3e;
-      border: 5px solid #cb2d3e;
-      color: #ece9e6;
-    }
-  }
-}
-
-.bg {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: -1;
-
-  .h1 {
-    font-size: 8rem;
-  }
-}
-
-.check {
-  display: -webkit-flex; /* Added for Safari */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1.25rem;
-}
-
-@media (min-width: 700px) {
-  .postDisplay {
-    display: -webkit-flex; /* Added for Safari */
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 5%;
-  }
-
-  .nft {
-    max-width: 300px;
-    margin: 2rem auto;
-    border: 1px solid #ffffff22;
-    background-color: #282c34;
-    background: -webkit-linear-gradient(
-      0deg,
-      rgba(40, 44, 52, 1) 0%,
-      rgba(17, 0, 32, 0.5) 100%
-    );
-    background: linear-gradient(
-      0deg,
-      rgba(40, 44, 52, 1) 0%,
-      rgba(17, 0, 32, 0.5) 100%
-    );
-    box-shadow: 0 7px 20px 5px #00000088;
-    border-radius: 0.7rem;
-    overflow: hidden;
-    transition: 0.5s all;
-
-    hr {
-      width: 100%;
-      border: none;
-      border-bottom: 1px solid #88888855;
-      margin-top: 0;
-    }
-
-    ins {
-      text-decoration: none;
-    }
-
-    .main {
-      display: -webkit-flex; /* Added for Safari */
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      padding: 1rem;
-
-      .image-wrapper {
-        position: relative;
-        width: auto;
-        height: 200px;
-        overflow: hidden;
-        border-radius: 0.5rem;
-        margin-right: 1.75rem;
-      }
-
-      .tokenImage {
-        object-fit: cover;
-      }
-
-      .description {
-        margin: 0.5rem 0;
-        color: #a89ec9;
-      }
-
-      .tokenInfo {
-        display: -webkit-flex; /* Added for Safari */
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-right: 1.5rem;
-
-        .price {
-          display: -webkit-flex; /* Added for Safari */
-          display: flex;
-          align-items: center;
-          color: #ee83e5;
-          font-weight: 700;
-
-          ins {
-            margin-left: -0.3rem;
-            margin-right: 0.5rem;
-          }
-        }
-
-        .duration {
-          display: -webkit-flex; /* Added for Safari */
-          display: flex;
-          align-items: center;
-          color: #a89ec9;
-          margin-right: 0.2rem;
-
-          ins {
-            margin: 0.5rem;
-            margin-bottom: 0.4rem;
-          }
-        }
-      }
-
-      .creator {
-        display: -webkit-flex; /* Added for Safari */
-        display: flex;
-        align-items: center;
-        margin-top: 0.2rem;
-        margin-bottom: -0.3rem;
-
-        ins {
-          color: #a89ec9;
-          text-decoration: none;
-        }
-
-        .wrapper {
-          display: -webkit-flex; /* Added for Safari */
-          display: flex;
-          align-items: center;
-          border: 1px solid #ffffff22;
-          padding: 0.3rem;
-          margin: 0;
-          margin-right: 0.5rem;
-          border-radius: 100%;
-          box-shadow: inset 0 0 0 4px #000000aa;
-
-          img {
-            border-radius: 100%;
-            border: 1px solid #ffffff22;
-            width: 2rem;
-            height: 2rem;
-            object-fit: cover;
-            margin: 0;
-          }
-        }
-      }
-    }
-
-    .but {
-      height: 28px;
-      border: solid 2px #567af2;
-      text-align: center;
-      font-weight: 900;
-    }
-
-    ::before {
-      position: fixed;
-      content: "";
-      box-shadow: 0 0 100px 40px #ffffff08;
-      top: -10%;
-      left: -100%;
-      transform: rotate(-45deg);
-      height: 60rem;
-      transition: 0;
-    }
   }
 }
