--- a/src/app/clubsposts/ppst.css
+++ b/src/app/clubsposts/ppst.css
@@ -37,15 +37,16 @@ code {
 
     .image-wrapper {
       position: relative;
-      width: auto; /* Ensure the image takes up the full width of the card */
-      height: 200px; /* Set this height based on your design */
-      overflow: hidden;
-      border-radius: 0.5rem;
-      margin-right: 1.75rem;
+      width: 100%; /* or a fixed width like 300px */
+      height: 200px; /* or any fixed height */
     }
 
     .tokenImage {
-      object-fit: cover;
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* Keeps aspect ratio */
     }
 
     .description {
