--- a/src/app/clubsposts/ppst.css
+++ b/src/app/clubsposts/ppst.css
@@ -108,7 +108,7 @@ code {
         border-radius: 100%;
         box-shadow: inset 0 0 0 4px #000000aa;
 
-        .proImage {
+        img {
           border-radius: 100%;
           border: 1px solid #ffffff22;
           width: 2rem;
